tests/sksl/errors/StaticSwitchTest.sksl
void non_constant_test_in_static_switch() {
    int x = int(sqrt(1));
    @switch (x) {
        case 1:
            sk_FragColor = half4(1);
            break;
        default:
            sk_FragColor = half4(0);
    }
}
